--- a/src/group_10_ca_ej.Rmd
+++ b/src/group_10_ca_ej.Rmd
@@ -20,6 +20,8 @@ ces <- read_csv(here("data", "ces3demographics.csv")) %>%
 ```{r}
 ggplot(data = ces, aes(x=white_percent, y=ces_3_0_score)) +
   geom_hex() +
-  labs(x = "Percent Population White", y = "CalEnviroScreen Score")
+  labs(x = "Percent Population White", y = "CalEnviroScreen Score")+
+  scale_fill_gradient(low = "darkorchid4", high = "magenta")+
+  theme_minimal()
 ```
 
