Changes plot colors, added title

--- a/src/group_10_ca_ej.Rmd
+++ b/src/group_10_ca_ej.Rmd
@@ -18,10 +18,15 @@ ces <- read_csv(here("data", "ces3demographics.csv")) %>%
 ```
 
 ```{r}
+# Plot data
 ggplot(data = ces, aes(x=white_percent, y=ces_3_0_score)) +
   geom_hex() +
-  labs(x = "Percent Population White", y = "CalEnviroScreen Score")+
-  scale_fill_gradient(low = "darkorchid4", high = "magenta")+
+  labs(
+    x = "Percent Population White",
+    y = "CalEnviroScreen Score",
+    title = "White Population Demographic vs CalEnviroScreen Score"
+  ) +
+  scale_fill_gradient(low = "navy", high = "orange")+
   theme_minimal()
 ```
 
